fix: post img stretch deformation (index)

--- a/src/scss/kratosr.scss
+++ b/src/scss/kratosr.scss
@@ -1551,7 +1551,8 @@ ul.kratos-post-meta {
       padding: 2px;
       border: 1px solid #f3f3f3;
       height: 145px;
-      width: 240px
+      width: 240px;
+      object-fit: cover;
     }
   }
 }
